# ocean

./: README.md
docs/: core_cli_engine_system_prd_v3.md  core_configuration_system_prd_v2.md  core_event_bus_system_prd_v2.md  core_logging_system_prd_v2.md  core_module_loader_system_prd_v2.md  launcher_modular_prd_v2.md  module_clipboard_prd_v2.md
wave/conf/: clipboard.conf  launcher.conf  logger.conf  modules.conf
wave/core/: core.cpp  core.hpp
wave/core/cli/: cli_engine.cpp  cli_engine.hpp
wave/core/configuration/: configuration.cpp  configuration.hpp
wave/core/eventbus/: eventbus.cpp  eventbus.hpp
wave/core/logging/: logging.cpp  logging.hpp
wave/core/moduleloader/: module_loader.cpp  module_loader.hpp
wave/include/: ICoreAccess.hpp
wave/modules/clipboard/: CMakeLists.txt  clipboard_module.cpp  clipboard_module.hpp
wave/tests/: test_cli_engine.cpp  test_clipboard_module.cpp  test_configuration.cpp  test_core.cpp  test_eventbus.cpp  test_logging.cpp  test_module_loader.cpp
wave/tests/dummy_module/: CMakeLists.txt  dummy_module.cpp
